--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = mvs
-version = 0.0
+version = 0.0.1
 author = 1izard
-description = mv files
+description = Move files like mv by editor
 long_descriptoin = file: README.md
 license = MIT
 classifires =
