--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = mvs
 version = 0.0.1
 author = 1izard
-description = Move files like mv by editor
+description = Rename files at once by editor
 long_descriptoin = file: README.md
 license = MIT
 classifires =
@@ -13,10 +13,10 @@ classifires =
 
 [options]
 python_requires = >=3.7
-packages = mvs
+packages = renames
 include_package_data = true
 zip_safe = false
 
 [options.entry_points]
 console_scripts =
-    mvs = mvs.__main__:main
+    renames = renames.__main__:main
